fix(server): make readable mention hover

--- a/src/styles/server/channel/text.scss
+++ b/src/styles/server/channel/text.scss
@@ -13,9 +13,9 @@
 /*
  * > interaction
  */
-/* .interactive:hover {
+.interactive:hover {
   color: var(--black-500);
-} */
+}
 
 /*
  * > new messages bar
